<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MVP.View.RegisterActivity">
    <ProgressBar
        android:id="@+id/progress_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_marginTop="40dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/registrasi_akun"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/foto_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/default_fp"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_nama_lengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="@string/nama_lengkap"
            android:hint="@string/nama_lengkap"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_nomor_hp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:autofillHints="@string/nomor_hp"
            android:hint="@string/nomor_hp"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/email"
            android:hint="@string/email"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="@string/password"
            android:hint="@string/password"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_to_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/back"/>
            <Button
                android:id="@+id/btn_daftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/daftar" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>