<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MVP.View.FragmentAlertActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:background="@drawable/ic_main_banner"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logout_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logout"
            android:contentDescription="@string/for_logout" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_profile_alert"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/default_fp"/>
        <TextView
            android:id="@+id/nama_user_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_gravity="end"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:maxLength="30"
            android:background="@drawable/name_background"
            android:text="@string/info_untuk_darurat"/>
    </LinearLayout>
    <ToggleButton
        android:id="@+id/tbt_emergency_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:textOn="@string/infoDarurat"
        android:textOff="@string/info_untuk_darurat"
        android:textSize="18sp"
        android:drawableTop="@drawable/ic_panic"
        android:textColor="@android:color/black"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:layout_centerInParent="true"
        android:background="@drawable/white_edged_background"/>
    <Button
        android:id="@+id/btn_losfon"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/white_edged_background"
        android:drawableTop="@drawable/ic_losfon"
        android:layout_marginTop="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/lost_and_found"
        android:textAllCaps="false"
        android:layout_centerInParent="true"
        android:layout_below="@id/tbt_emergency_button"
        android:textSize="18sp"/>
</RelativeLayout>