<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/gray"
        app:cardMaxElevation="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <LinearLayout
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="30"
                    android:textColor="@color/black"
                    android:text="@string/nama_barang"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:gravity="end"
                    android:maxLength="30"
                    android:maxLines="2"
                    android:textColor="@color/black"
                    android:text="@string/nama_pemosting"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/l1"
                android:textColor="@color/black"
                android:text="@string/tanggal"/>
            <ImageView
                android:id="@+id/image_stuff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:layout_below="@id/tanggal"
                android:contentDescription="@string/nama_barang"
                android:layout_centerInParent="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_stuff"
                android:textAlignment="textEnd"
                android:gravity="end"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/lost_and_found"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>